@@ -29,7 +29,8 @@ using System.Runtime.InteropServices;
 //
 // You can specify all the values or you can use the default the Revision and 
 // Build Numbers by using the '*' as shown below:
-[assembly: AssemblyVersion("0.50.0.0")]
+[assembly: AssemblyVersion("0.50.*")]
+[assembly: AssemblyInformationalVersion("0.50")]
 
 // Because it exposes externally visible types.
 [assembly: CLSCompliant(true)]
