@@ -29,4 +29,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("0.50.0.0")]
+[assembly: AssemblyVersion("0.50.*")]
+[assembly: AssemblyInformationalVersion("0.50")]
